Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -193,6 +193,91 @@
     ]
   },
   {
+    "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
+    "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
+    "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những thực phẩm nào có thể khiến não nhanh lão hóa?",
+    "answers": [
+      {
+        "text": "Thực phẩm chế biến sẵn",
+        "correct": true
+      },
+      {
+        "text": "Rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Hạt ngũ cốc",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "answers": [
+      {
+        "text": "Uống đủ nước và không uống rượu bia.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường ăn mặn.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "answers": [
+      {
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "correct": true
+      },
+      {
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "correct": false
+      },
+      {
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
     "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
     "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
@@ -242,6 +327,33 @@
       },
       {
         "text": "Vì các công ty vàng tăng giá bán.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trường ĐH Văn hóa Hà Nội xét tuyển thẳng thí sinh có IELTS 8.0",
+    "content": "Trường Đại học Văn hóa Hà Nội vừa công bố phương thức tuyển sinh năm 2025, trong đó thí sinh đạt IELTS từ 8.0 trở lên sẽ được xét tuyển thẳng, chỉ sau những thí sinh có giải quốc gia. Trường sử dụng ba phương thức xét tuyển: xét tuyển thẳng, xét điểm thi tốt nghiệp THPT và xét học bạ. Ngoài ra, điểm chuẩn cho các tổ hợp có tiếng Anh sẽ thấp hơn 1 điểm so với các tổ hợp khác, nhằm ưu tiên cho thí sinh có năng lực ngoại ngữ.",
+    "link": "https://dantri.com.vn/giao-duc/truong-dh-van-hoa-ha-noi-xet-tuyen-thang-thi-sinh-co-ielts-80-20250321114840736.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Trường ĐH Văn hóa Hà Nội có yêu cầu gì cho thí sinh xét tuyển thẳng?",
+    "answers": [
+      {
+        "text": "Có chứng chỉ IELTS từ 8.0 trở lên",
+        "correct": true
+      },
+      {
+        "text": "Có điểm thi tốt nghiệp THPT cao",
+        "correct": false
+      },
+      {
+        "text": "Phải có giải quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Cần học bạ đạt yêu cầu",
         "correct": false
       }
     ]
@@ -390,37 +502,6 @@
     ]
   },
   {
-    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
-    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
-    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
-    "answers": [
-      {
-        "text": "Viêm phổi do virus hợp bào hô hấp",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm phế quản",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Sởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chàng trai nặng 162 kg quyết giảm cân",
     "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
     "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
@@ -447,6 +528,37 @@
       },
       {
         "text": "30 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
+    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
+    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Viêm phổi do virus hợp bào hô hấp",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm phế quản",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Sởi",
         "correct": false
       }
     ]
@@ -618,33 +730,6 @@
     ]
   },
   {
-    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
-    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
-    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Dịch vụ y tế dành cho người nước ngoài",
-        "correct": true
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người Việt",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người cao tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người mẹ quyết giữ thai nhi dị tật não",
     "content": "Chị Hồi, 41 tuổi, quyết định giữ thai nhi bị dị tật não úng thủy sau khi siêu âm ở tuần 25 thai kỳ. Dù được bác sĩ cảnh báo về tình trạng thai nhi thiểu sản thể chai, chị vẫn kiên định nuôi dưỡng con. Sau khi sinh, bé trai chào đời với cân nặng 3,8 kg và được can thiệp dẫn lưu dịch não tủy, hiện có những tiến triển khả quan về thần kinh. Bác sĩ cho biết, trẻ có dị tật não cần được chăm sóc y tế suốt đời để cải thiện chất lượng cuộc sống.",
     "link": "https://vnexpress.net/nguoi-me-quyet-giu-thai-nhi-di-tat-nao-4863938.html",
@@ -667,6 +752,33 @@
       },
       {
         "text": "Vì chị không biết về tình trạng của thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
+    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
+    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Dịch vụ y tế dành cho người nước ngoài",
+        "correct": true
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người Việt",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người cao tuổi",
         "correct": false
       }
     ]
@@ -1215,37 +1327,6 @@
       },
       {
         "text": "Vì ông Biden không cấp đủ ngân sách cho nông nghiệp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "7 điều nên làm mỗi sáng để tim khỏe",
-    "content": "Bài viết đề cập đến 7 thói quen nên thực hiện mỗi sáng để duy trì sức khỏe tim mạch. Những thói quen này bao gồm uống nước chanh ấm, thiền và hít thở sâu, ăn sáng lành mạnh, đi bộ ngắn, uống trà thảo mộc, tắm nắng và duy trì suy nghĩ tích cực. Các hoạt động này không chỉ giúp ổn định huyết áp và cholesterol mà còn giảm nguy cơ mắc bệnh tim.",
-    "link": "https://vnexpress.net/7-dieu-nen-lam-moi-sang-de-tim-khoe-4863871.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Bạn nên làm gì mỗi sáng để duy trì sức khỏe tim mạch?",
-    "answers": [
-      {
-        "text": "Uống nước chanh ấm",
-        "correct": true
-      },
-      {
-        "text": "Ăn nhiều đồ ngọt",
-        "correct": false
-      },
-      {
-        "text": "Ngủ dậy muộn",
-        "correct": false
-      },
-      {
-        "text": "Không tập thể dục",
-        "correct": false
-      },
-      {
-        "text": "Bỏ bữa sáng",
         "correct": false
       }
     ]
@@ -3609,37 +3690,6 @@
     ]
   },
   {
-    "title": "Australia 0-0 Indonesia (H1): Đội khách đá hỏng 11m",
-    "content": "Trận đấu giữa Australia và Indonesia diễn ra vào chiều 20/3/2025 đã kết thúc với tỷ số hòa 0-0. Indonesia đã có cơ hội ghi bàn từ chấm phạt đền nhưng hậu vệ Kevin Diks đã sút hỏng, bóng trúng cột dọc và không vào lưới. Dù Australia có lợi thế sân nhà nhưng không thể tận dụng tốt cơ hội để ghi bàn, và trận đấu kết thúc mà không có bàn thắng nào được ghi.",
-    "link": "https://vnexpress.net/australia-0-0-indonesia-h1-doi-khach-da-hong-11m-4863800.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Trận đấu giữa Australia và Indonesia kết thúc với tỷ số nào?",
-    "answers": [
-      {
-        "text": "0-0",
-        "correct": true
-      },
-      {
-        "text": "1-0",
-        "correct": false
-      },
-      {
-        "text": "2-1",
-        "correct": false
-      },
-      {
-        "text": "3-2",
-        "correct": false
-      },
-      {
-        "text": "0-1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Australia - Indonesia: Đội khách tung 10 cầu thủ lai đá chính",
     "content": "Trong trận đấu tại vòng loại World Cup 2026 khu vực châu Á, đội tuyển Indonesia đã quyết định tung ra đội hình xuất phát với 10 cầu thủ mang dòng máu lai, chỉ duy nhất một cầu thủ bản địa là Marselino Ferdinan. Đội hình của Indonesia sử dụng sơ đồ 3-5-2 với Maarten Paes trong khung gỗ và bộ ba trung vệ gồm Mees Hilgers, Jay Idzes, và Dean James. Trong khi đó, Australia cũng đã công bố đội hình 3-4-3 với sự trở lại của thủ môn Matthew Ryan.",
     "link": "https://vnexpress.net/australia-indonesia-doi-khach-tung-10-cau-thu-lai-da-chinh-4863800.html",
@@ -3666,6 +3716,37 @@
       },
       {
         "text": "5",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Australia 0-0 Indonesia (H1): Đội khách đá hỏng 11m",
+    "content": "Trận đấu giữa Australia và Indonesia diễn ra vào chiều 20/3/2025 đã kết thúc với tỷ số hòa 0-0. Indonesia đã có cơ hội ghi bàn từ chấm phạt đền nhưng hậu vệ Kevin Diks đã sút hỏng, bóng trúng cột dọc và không vào lưới. Dù Australia có lợi thế sân nhà nhưng không thể tận dụng tốt cơ hội để ghi bàn, và trận đấu kết thúc mà không có bàn thắng nào được ghi.",
+    "link": "https://vnexpress.net/australia-0-0-indonesia-h1-doi-khach-da-hong-11m-4863800.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Trận đấu giữa Australia và Indonesia kết thúc với tỷ số nào?",
+    "answers": [
+      {
+        "text": "0-0",
+        "correct": true
+      },
+      {
+        "text": "1-0",
+        "correct": false
+      },
+      {
+        "text": "2-1",
+        "correct": false
+      },
+      {
+        "text": "3-2",
+        "correct": false
+      },
+      {
+        "text": "0-1",
         "correct": false
       }
     ]
