--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,37 @@
     ]
   },
   {
+    "title": "Quảng Ngãi hỗ trợ lưu học sinh Lào mức cao nhất hơn 7 triệu đồng/tháng",
+    "content": "Tỉnh Quảng Ngãi đã công bố chính sách hỗ trợ cho lưu học sinh Lào theo học tại các trường trên địa bàn tỉnh. Mức hỗ trợ cao nhất lên đến hơn 7 triệu đồng/tháng cho hệ đào tạo ngắn hạn, bao gồm chi phí sinh hoạt và học tập. Đối với hệ đào tạo dài hạn, mức hỗ trợ hàng tháng cũng được điều chỉnh phù hợp, giúp các sinh viên Lào có điều kiện tốt hơn trong việc học tập tại Việt Nam.",
+    "link": "https://dantri.com.vn/giao-duc/quang-ngai-ho-tro-luu-hoc-sinh-lao-muc-cao-nhat-hon-7-trieu-dongthang-20250321113952732.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Quảng Ngãi hỗ trợ lưu học sinh Lào bao nhiêu tiền mỗi tháng?",
+    "answers": [
+      {
+        "text": "Hơn 7 triệu đồng/tháng",
+        "correct": true
+      },
+      {
+        "text": "3 triệu đồng/tháng",
+        "correct": false
+      },
+      {
+        "text": "5 triệu đồng/tháng",
+        "correct": false
+      },
+      {
+        "text": "6 triệu đồng/tháng",
+        "correct": false
+      },
+      {
+        "text": "4 triệu đồng/tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "MSB đồng hành mang âm nhạc cổ điển đến khán giả Việt",
     "content": "Vào ngày 20/3, Ngân hàng TMCP Hàng Hải Việt Nam (MSB) đã phối hợp tổ chức đêm nhạc giao hưởng mang tên \"Những kiệt tác cổ điển và lãng mạn\" tại Nhà hát Hồ Gươm, Hà Nội. Chương trình có sự tham gia của Dàn nhạc Giao hưởng Hà Nội và trình diễn các tác phẩm nổi tiếng của Gioachino Rossini, Franz Krommer và Felix Mendelssohn. Sự kiện không chỉ mang đến trải nghiệm âm nhạc độc đáo cho khán giả mà còn thể hiện cam kết của MSB trong việc nâng tầm văn hóa nghệ thuật tại Việt Nam.",
     "link": "https://dantri.com.vn/giai-tri/msb-dong-hanh-mang-am-nhac-co-dien-den-khan-gia-viet-20250321112517264.htm",
@@ -610,37 +641,6 @@
     ]
   },
   {
-    "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
-    "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
-    "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những thực phẩm nào có thể khiến não nhanh lão hóa?",
-    "answers": [
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": true
-      },
-      {
-        "text": "Rau xanh",
-        "correct": false
-      },
-      {
-        "text": "Trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Hạt ngũ cốc",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
     "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
     "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
@@ -690,6 +690,37 @@
       },
       {
         "text": "Giành huy chương vàng Olympic",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
+    "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
+    "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những thực phẩm nào có thể khiến não nhanh lão hóa?",
+    "answers": [
+      {
+        "text": "Thực phẩm chế biến sẵn",
+        "correct": true
+      },
+      {
+        "text": "Rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Hạt ngũ cốc",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà",
         "correct": false
       }
     ]
