Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Vinicius sút xa, giúp Brazil thắng ở phút bù",
+    "content": "Vinicius đã ghi bàn quyết định giúp Brazil đánh bại Colombia 2-1 trong trận đấu vòng loại World Cup 2026 diễn ra vào sáng 21/3. Trước đó, Raphinha đã mở tỷ số từ quả phạt đền ở phút thứ 6, nhưng Colombia đã gỡ hòa nhờ bàn thắng của Luis Diaz ở phút 41. Trong những phút bù giờ, Vinicius đã sút xa từ 25m, giúp Brazil có được chiến thắng quan trọng và củng cố vị trí thứ hai tại vòng loại khu vực Nam Mỹ.",
+    "link": "https://vnexpress.net/vinicius-sut-xa-giup-brazil-thang-o-phut-bu-4864152.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Vinicius đã ghi bàn như thế nào trong trận đấu với Colombia?",
+    "answers": [
+      {
+        "text": "Sút xa từ 25m",
+        "correct": true
+      },
+      {
+        "text": "Sút phạt đền",
+        "correct": false
+      },
+      {
+        "text": "Đánh đầu",
+        "correct": false
+      },
+      {
+        "text": "Sút chân trái",
+        "correct": false
+      },
+      {
+        "text": "Sút chân phải",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kiến nghị khám bệnh vào cuối tuần được hưởng BHYT",
     "content": "Cử tri tỉnh Đồng Nai kiến nghị Bộ Y tế cho phép hưởng bảo hiểm y tế (BHYT) khi khám bệnh vào cuối tuần, do nhiều bệnh viện không thanh toán BHYT trong các ngày này, khiến người bệnh phải chi trả chi phí cao. Bộ trưởng Y tế Đào Hồng Lan cho biết hiện một số bệnh viện đã triển khai khám ngoài giờ và có thanh toán BHYT, nhưng không phải tất cả bệnh viện đều thực hiện. Bộ Y tế sẽ nghiên cứu sửa đổi các quy định để đảm bảo quyền lợi cho người có BHYT.",
     "link": "https://vnexpress.net/kien-nghi-kham-benh-vao-cuoi-tuan-duoc-huong-bhyt-4864070.html",
