Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Những bài dưỡng sinh 'hoang dã' của người Trung Quốc",
+    "content": "Nhiều người cao tuổi ở Trung Quốc đang thực hành các bài tập dưỡng sinh 'hoang dã' như bò như cá sấu, trèo cây và treo cổ trên cây với hy vọng cải thiện sức khỏe và kéo dài tuổi thọ. Mặc dù những bài tập này thu hút sự quan tâm, nhưng các chuyên gia cảnh báo rằng chúng có thể tiềm ẩn nguy cơ chấn thương nghiêm trọng, đặc biệt là với người lớn tuổi. Một số bài tập như treo cổ đã bị cấm sau khi gây ra tai nạn tử vong, trong khi các chuyên gia khuyên nên chọn các hoạt động an toàn hơn như bơi lội và đi bộ.",
+    "link": "https://vnexpress.net/nhung-bai-duong-sinh-hoang-da-cua-nguoi-trung-quoc-4864189.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 6,
+    "question": "Những bài tập dưỡng sinh 'hoang dã' của người Trung Quốc có tác dụng gì?",
+    "answers": [
+      {
+        "text": "Cải thiện sức khỏe và kéo dài tuổi thọ",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức mạnh cơ bắp",
+        "correct": false
+      },
+      {
+        "text": "Giảm đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường trí nhớ",
+        "correct": false
+      },
+      {
+        "text": "Cải thiện thị lực",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Golfer Philippines vô địch Lexus Challenge 2025",
     "content": "Aidric Chan, golfer đến từ Philippines, đã xuất sắc giành chiến thắng tại Lexus Challenge 2025 với tổng điểm -8 sau vòng cuối diễn ra vào chiều 21/3 tại Bà Rịa - Vũng Tàu. Chan ghi được -4 trong vòng cuối và vượt qua ba đối thủ cạnh tranh gần nhất, Juvic Pagunsan, Filip Lundell và Sam Broadhurst, để đứng đầu bảng. Với chiến thắng này, Chan nhận phần thưởng 15.750 USD từ tổng quỹ thưởng 90.000 USD của giải đấu.",
     "link": "https://vnexpress.net/golfer-philippines-vo-dich-lexus-challenge-2025-4864236.html",
@@ -1362,33 +1393,6 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
-    "answers": [
-      {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
-        "correct": true
-      },
-      {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
-        "correct": false
-      },
-      {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
-        "correct": false
-      },
-      {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 cách bảo vệ thận",
     "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
     "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
@@ -1442,6 +1446,33 @@
       },
       {
         "text": "Thịt gà",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "answers": [
+      {
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "correct": true
+      },
+      {
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "correct": false
+      },
+      {
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
@@ -2335,6 +2366,37 @@
     ]
   },
   {
+    "title": "Viêm tai giữa thủng nhĩ mà không biết",
+    "content": "Chị Duyên, 35 tuổi, đã bị viêm tai giữa gây thủng màng nhĩ mà không biết và tự điều trị trong một năm. Khi triệu chứng đau tai và ù nặng hơn, chị mới đến bệnh viện khám và được chẩn đoán thủng màng nhĩ do viêm tai giữa. Bác sĩ đã tiến hành phẫu thuật vá màng nhĩ cho chị và khuyến cáo cần điều trị kịp thời để tránh các biến chứng nghiêm trọng như mất thính lực hay nhiễm trùng tai.",
+    "link": "https://vnexpress.net/viem-tai-giua-thung-nhi-ma-khong-biet-4864027.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Viêm tai giữa thủng nhĩ có thể gây ra biến chứng gì?",
+    "answers": [
+      {
+        "text": "Mất thính lực",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Chảy máu mũi",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa",
+        "correct": false
+      },
+      {
+        "text": "Sốt cao",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
     "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
     "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
@@ -2384,37 +2446,6 @@
       },
       {
         "text": "Để trẻ không bị sốt khi mắc bệnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Viêm tai giữa thủng nhĩ mà không biết",
-    "content": "Chị Duyên, 35 tuổi, đã bị viêm tai giữa gây thủng màng nhĩ mà không biết và tự điều trị trong một năm. Khi triệu chứng đau tai và ù nặng hơn, chị mới đến bệnh viện khám và được chẩn đoán thủng màng nhĩ do viêm tai giữa. Bác sĩ đã tiến hành phẫu thuật vá màng nhĩ cho chị và khuyến cáo cần điều trị kịp thời để tránh các biến chứng nghiêm trọng như mất thính lực hay nhiễm trùng tai.",
-    "link": "https://vnexpress.net/viem-tai-giua-thung-nhi-ma-khong-biet-4864027.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Viêm tai giữa thủng nhĩ có thể gây ra biến chứng gì?",
-    "answers": [
-      {
-        "text": "Mất thính lực",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Chảy máu mũi",
-        "correct": false
-      },
-      {
-        "text": "Nôn mửa",
-        "correct": false
-      },
-      {
-        "text": "Sốt cao",
         "correct": false
       }
     ]
@@ -3023,33 +3054,6 @@
     ]
   },
   {
-    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
-    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
-    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
-    "answers": [
-      {
-        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -3099,6 +3103,33 @@
       },
       {
         "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
         "correct": false
       }
     ]
@@ -4668,37 +4699,6 @@
       },
       {
         "text": "Khuyến khích trẻ chơi game nhiều hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ra mắt Ngân hàng Nhà nước khu vực 11",
-    "content": "Ngân hàng Nhà nước khu vực 11 đã chính thức ra mắt tại Đắk Lắk, đánh dấu sự kiện quan trọng trong việc tổ chức lại hệ thống ngân hàng tại Việt Nam. Đây là một trong 15 ngân hàng khu vực nhằm nâng cao hiệu quả quản lý và phát triển kinh tế trong giai đoạn mới. Tổng dư nợ tín dụng tại khu vực này đạt hơn 590.000 tỷ đồng, tập trung chủ yếu vào nông nghiệp và nông thôn, với mục tiêu tăng trưởng tín dụng khoảng 16% trong năm 2025.",
-    "link": "https://tuoitre.vn/ra-mat-ngan-hang-nha-nuoc-ngan-hang-khu-vuc-11-20250320145121946.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Ngân hàng Nhà nước khu vực 11 được ra mắt ở đâu?",
-    "answers": [
-      {
-        "text": "Đắk Lắk",
-        "correct": true
-      },
-      {
-        "text": "Đà Nẵng",
-        "correct": false
-      },
-      {
-        "text": "Hà Nội",
-        "correct": false
-      },
-      {
-        "text": "TP.HCM",
-        "correct": false
-      },
-      {
-        "text": "Nha Trang",
         "correct": false
       }
     ]
